Fino a sezione azzurra

--- a/index.html
+++ b/index.html
@@ -123,6 +123,48 @@
       <div class="sezione_azzurra">
         <h2>Learn and grow with award-winning support and a thriving community <br> behind you.</h2>
         <p>You don't have to go it alone. Master the inbound methodologi and get the most of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you. </p>
+        <div class="struttura_quadrati">
+          <div class="quadrato">
+            <img src="img/manine.svg" alt="groups">
+            <h2>150+</h2>
+            <p>HubSpot user groups</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/blog.svg" alt="blog">
+            <h2>4.5M+</h2>
+            <p>monthly visits</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/academy.svg" alt="academy">
+            <h2>155K+</h2>
+            <p>certified professionals</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/inbound.svg" alt="inbound">
+            <h2>21K+</h2>
+            <p>registered attendees</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/connect.svg" alt="integrations">
+            <h2>200+</h2>
+            <p>integrations</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/globe.svg" alt="languages">
+            <h2>6+</h2>
+            <p>languages</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/followers.svg" alt="followers">
+            <h2>2.6M+</h2>
+            <p>social followers</p>
+          </div><!--
+       --><div class="quadrato">
+            <img src="img/growthhub.svg" alt="growthhub">
+            <h2>5K+</h2>
+            <p>profiles and counting</p>
+          </div>
+        </div>
       </div>
     </main>
 
