--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         </div>
       </div>
       <!-- FIne blocco orizzontale e inizio blocco tre colonne  -->
-      <div class="clearfix width_80 tre_colonne">
+      <section class="clearfix width_80 tre_colonne">
+
         <div class="blocco bl_3col">
           <img src="img/pallini.jpg" alt="marketing hub">
           <h2>Marketing Hub</h2>
@@ -92,6 +93,7 @@
           </ul>
           <a href="#"class="button b_orange b_large">Learn More</a>
         </div>
+
         <div class="blocco bl_3col col_middle">
           <img src="img/borsa.png" alt="marketing hub">
           <h2>Sales Hub</h2>
@@ -105,7 +107,9 @@
           </ul>
           <a href="#"class="button b_orange b_large">Learn More</a>
         </div>
+
         <div class="blocco bl_3col">
+
           <img src="img/furniture.png" alt="marketing hub">
           <h2>Service Hub</h2>
           <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
@@ -118,9 +122,12 @@
           </ul>
           <a href="#"class="button b_orange b_large">Learn More</a>
         </div>
-      </div>
+
+      </section>
+
       <!-- Fine tre colonne  -->
-      <div class="sezione_azzurra">
+
+      <section class="sezione_azzurra">
         <h2>Learn and grow with award-winning support and a thriving community <br> behind you.</h2>
         <p>You don't have to go it alone. Master the inbound methodologi and get the most of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you. </p>
         <div class="struttura_quadrati">
@@ -165,8 +172,114 @@
             <p>profiles and counting</p>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- Fine sezione_azzurra e inizio ultima sezione bianca -->
+      <section class="sezione_bianca">
+
+        <div class="clearfix bianca_prima_riga">
+          <div class="bianca1 b1_left">
+            <h2>64,500</h2>
+            <p>customers in over <b>100</b> countries growing their businesses with Hubspot</p>
+          </div>
+          <div class="bianca1 b1_right">
+            <img src="img/atlassian.png" alt="atlassian">
+            <img src="img/doordash.png" alt="doordash">
+            <img src="img/crowd.png" alt="crowd">
+            <img src="img/purple.png" alt="purple">
+            <img src="img/subaru.png" alt="subaru">
+            <img src="img/wistia.png" alt="wistia">
+            <img src="img/classpass.png" alt="classpass">
+            <img src="img/vmware.png" alt="vmware">
+          </div>
+        </div>
+
+        <div class="clearfix width_80 bianca_seconda_riga">
+          <div class="bianca2 b2_left">
+            <h2>Start Growing With Hubspot Today</h2>
+            <p>With tools to make every part of your process more human and a cupport team excited to help you, getting started with inbound has never been easier.</p>
+            <a href="#"class="button b_orange b_large">GetHubspotFree</a>
+            <p>Get started with FREE tools, or get more with our premium software.</p>
+          </div>
+          <div class="bianca2 b2_right">
+            <img src="img/woman.webp" alt="donna">
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- Fine main inizio footer -->
+
+    <footer>
+      <section class="clearfix width_80 quattro_colonne">
+        <div class="col4">
+          <h3></h3>
+          <ul>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+          </ul>
+        </div>
+        <div class="col4">
+          <h3></h3>
+          <ul>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+          </ul>
+        </div>
+        <div class="col4">
+          <h3></h3>
+          <ul>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+          </ul>
+        </div>
+        <div class="col4">
+          <h3></h3>
+          <ul>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+            <li><a href="#"></a> </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="width_80 lingue">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </section>
+
+      <section class="clearfix width_80 ultimo_footer">
+        <div class="logo_grey">
+          <img src="" alt="">
+          <p></p>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+        </div>
+      </section>
+    </footer>
 
   </body>
 </html>
