Esercizio finito senza hover e con codice da ripulire

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Hubspot</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/solid.min.css" integrity="sha512-xIEmv/u9DeZZRfvRS06QVP2C97Hs5i0ePXDooLa5ZPla3jOgPT/w6CzoSMPuRiumP7A/xhnUBxRmgWWwU26ZeQ==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/brands.min.css" integrity="sha512-dBL5cY4qTt42J1cfabCHTYR7KMztyd+n4t2GhD6EH/MKWJIIHuEYckJ1nHEpTwIaiDkrjzbc6WyiSkdLP+3INQ==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -211,71 +212,73 @@
     <footer>
       <section class="clearfix width_80 quattro_colonne">
         <div class="col4">
-          <h3></h3>
+          <h4>Increase Your Traffic</h4>
           <ul>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
+            <li><a href="#">Ad Software</a> </li>
+            <li><a href="#">Blog Software</a> </li>
+            <li><a href="#">SEO Software</a> </li>
+            <li><a href="#">Social Media Software</a> </li>
+            <li><a href="#">Content Management System</a> </li>
           </ul>
         </div>
         <div class="col4">
-          <h3></h3>
+          <h4>Connect With Leads</h4>
           <ul>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
+            <li><a href="#">Find New Prospects</a> </li>
+            <li><a href="#">Email Tracking</a> </li>
+            <li><a href="#">Sales Email Templates</a> </li>
+            <li><a href="#">Click to Call Your Leads</a> </li>
+            <li><a href="#">Email Marketing</a> </li>
           </ul>
         </div>
         <div class="col4">
-          <h3></h3>
+          <h4>Close and Manage Leads</h4>
           <ul>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
+            <li><a href="#">Document Tracking Tool</a> </li>
+            <li><a href="#">Meeting Schedule Tool</a> </li>
+            <li><a href="#">Sales Automation Tool</a> </li>
+            <li><a href="#">Lead Management Tool</a> </li>
+            <li><a href="#">Pipeline Management Tool</a> </li>
           </ul>
         </div>
         <div class="col4">
-          <h3></h3>
+          <h4>Support and Tools</h4>
           <ul>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
-            <li><a href="#"></a> </li>
+            <li><a href="#">HubSpot Partners</a> </li>
+            <li><a href="#">Join a Local User Group</a> </li>
+            <li><a href="#">Get a Free Website Report</a> </li>
+            <li><a href="#">HubSpot Templates</a> </li>
+            <li><a href="#">Free Tools & Generators</a> </li>
+            <li><a href="#" class="button">Contact Hubspot Support</a></li>
+            <li class="social"><a href="#"class="facebook"></a></li>
+            <li class="social"><a href="#"class="instagram"></a></li>
+            <li class="social"><a href="#"class="youtube"></a></li>
+            <li class="social"><a href="#"class="twitter"></a></li>
+            <li class="social"><a href="#"class="linkedin"></a> </li>
           </ul>
         </div>
       </section>
 
       <section class="width_80 lingue">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <ul>
+          <li><a href="#">English</a> </li>
+          <li><a href="#">Deutsch</a> </li>
+          <li><a href="#">日本語</a> </li>
+          <li><a href="#">Español</a> </li>
+          <li><a href="#">Português</a> </li>
+          <li><a href="#">Français</a> </li>
+        </ul>
       </section>
 
       <section class="clearfix width_80 ultimo_footer">
         <div class="logo_grey">
-          <img src="" alt="">
-          <p></p>
+          <img src="img/logo-grey.svg" alt="logo grey">
+          <p>Copyright © 2019 HubSpot, Inc.</p>
         </div>
         <div>
           <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">Legal Stuff</a></li>
+            <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
       </section>
